# cooper

./: .gitignore  CHANGELOG.md  Cargo.toml  INTERNAL.md  README.md  SPEC.md  install.sh  setup.sh
.claude/commands/: deploy.md
.github/workflows/: auto-release.yml  docs.yml  npm-cli.yml  release.yml  sdk.yml
crates/cooper-cli/: Cargo.toml
crates/cooper-cli/src/: main.rs
crates/cooper-cli/src/commands/: bench.rs  build.rs  db.rs  deploy.rs  destroy.rs  docs.rs  env.rs  generate.rs  logs.rs  mcp.rs  mod.rs  new_project.rs  run.rs  secrets.rs  test.rs  trace.rs
crates/cooper-codegen/: Cargo.toml
crates/cooper-codegen/src/: analyzer.rs  cooper_md.rs  lib.rs  openapi.rs  service_clients.rs  workspace.rs
crates/cooper-deploy/: Cargo.toml
crates/cooper-deploy/src/: cloud.rs  credentials.rs  diff.rs  lib.rs  provisioner.rs  scheduler.rs  state.rs
crates/cooper-deploy/src/providers/: aws.rs  azure.rs  cooper_cloud.rs  fly.rs  gcp.rs  mod.rs
crates/cooper-deploy/src/terraform/: executor.rs  generator.rs  hcl_builder.rs  mod.rs
crates/cooper-deploy/src/terraform/mappings/: aws_lambda.rs  aws_server.rs  azure_lambda.rs  azure_server.rs  gcp_lambda.rs  gcp_server.rs  mod.rs
crates/cooper-runtime/: Cargo.toml
crates/cooper-runtime/src/: error.rs  js.rs  lib.rs  router.rs  server.rs
crates/cooper-runtime/src/dashboard/: html.rs  server.rs
crates/cooper-runtime/src/infra/: binaries.rs  cron_scheduler.rs  embedded.rs  mod.rs
crates/cooper-runtime/src/ssr/: islands.rs  mod.rs  renderer.rs
crates/cooper-runtime/src/streaming/: mod.rs  sse.rs  websocket.rs
docs-site/: index.md  package.json
docs-site/.vitepress/: config.mts
docs-site/.vitepress/theme/: custom.css
docs-site/deploy/: aws.md  azure.md  fly.md  gcp.md  overview.md  preview.md
docs-site/guide/: ai.md  api-routes.md  auth.md  cache.md  clients.md  cron.md  dashboard.md  database.md  errors.md  getting-started.md  islands.md  middleware.md  monorepo.md  project-structure.md  pubsub.md  queues.md  rate-limiting.md  secrets.md  ssr.md  storage.md  streaming.md  testing.md  validation.md  what-is-cooper.md
docs-site/reference/: ai.md  api.md  auth.md  cache.md  cli.md  config.md  cron.md  db.md  islands.md  middleware.md  pubsub.md  queue.md  secrets.md  ssr.md  storage.md
examples/blog/: .gitignore  cooper.config.ts  package.json  tsconfig.json
examples/blog/islands/: LikeButton.island.tsx
examples/blog/migrations/: 001_users.sql  002_posts.sql
examples/blog/pages/: index.tsx
examples/blog/pages/posts/: [id].tsx  index.tsx
examples/blog/services/: auth.ts  cleanup.ts
examples/blog/services/health/: api.ts
examples/blog/services/notifications/: api.ts
examples/blog/services/posts/: api.ts  events.ts
examples/blog/services/users/: api.ts  events.ts
npm/cooper-cli/: install.js  package.json
sdk/: .npmrc  package-lock.json  package.json  tsconfig.json
sdk/src/: ai.ts  api.ts  auth.ts  bridge.ts  cache.ts  cron.ts  db.ts  error.ts  index.ts  islands.ts  middleware.ts  nats.ts  pubsub.ts  queue.ts  rateLimit.ts  registry.ts  secrets.ts  ssr.ts  storage.ts  test.ts
