[workspace]
resolver = "2"
members = [
    "crates/cooper-cli",
    "crates/cooper-runtime",
    "crates/cooper-codegen",
    "crates/cooper-deploy",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Eldridge-Morgan/cooper"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
notify = "8"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "compression-gzip"] }
axum = { version = "0.8", features = ["ws"] }
colored = "3"
indicatif = "0.17"
dialoguer = "0.11"
which = "7"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
futures = "0.3"
pathdiff = "0.2"
