[package]
name = "cooper-deploy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cooper-codegen = { path = "../cooper-codegen" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
colored.workspace = true
dialoguer.workspace = true
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
