[package]
name = "cooper-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cooper-codegen = { path = "../cooper-codegen" }
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
uuid.workspace = true
chrono.workspace = true
which.workspace = true
futures.workspace = true
reqwest.workspace = true
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
